fix layout issue on book preview page

--- a/app/styles/components/book-preview.less
+++ b/app/styles/components/book-preview.less
@@ -63,6 +63,10 @@
 		display: block;
 	}
 
+	#book-preview-right {
+		margin: auto;
+	}
+
 	#book-preview-cover {
 		width: 100%;
 		float: none;
